# churn-revenue-agent

./: .env.example  AGENTIC_APPROACH.md  Makefile  README.md  pyproject.toml
data/: .generation_meta.json  users.csv
reports/: metrics.csv  report.md  run_manifest.json
src/churn_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  data_generation.py  metrics.py  prompts.py  report.py  schemas.py  tools.py  validation.py
tests/: test_data_generation.py  test_metrics.py  test_validation.py
